Removed excessive name spacing, style fix on single input

--- a/src/graphify.css
+++ b/src/graphify.css
@@ -7,38 +7,41 @@
     margin-left: 0;
 }
 
-.graph-input + .single > .form-control {
+.input-group .single .form-control {
     width: 100%;
-    border-bottom-right-radius: 0.4rem;
-    border-top-right-radius: 0.4rem;
+    border-left: 0;
+}
+.input-group .single .form-control:first-child {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
-.graph-input + .double > .form-control {
+.input-group .double .form-control {
     width: 50%;
     border-left: 0;
 }
 
-.graph-input + .double > .form-control:first-child {
+.input-group .double .form-control:first-child {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
 }
 
-.graph-input + .triple > .form-control {
+.input-group .triple .form-control {
     width: 33%;
     border-left: 0;
 }
 
-.graph-input + .triple > .form-control:first-child {
+.input-group .triple .form-control:first-child {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
 }
 
-.graph-input + .quadruple > .form-control {
+.input-group .quadruple .form-control {
     width: 25%;
     border-left: 0;
 }
 
-.graph-input + .quadruple > .form-control:first-child {
+.input-group .quadruple .form-control:first-child {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
 }
@@ -54,4 +57,12 @@
     border-radius: 4px;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+
+.data-graph > .hide-chart-button {
+    position: absolute;
+    right: 4px;
+    top: 2px;
+    color: #ccc;
+    font-size: 13px;
 }
